src/objects/EMP_Farm_Diagnostic_and_Targets__c.object
<CustomObject>
    <fields>
        <fullName>BPA_Not_Implemented__c</fullName>
        <label>BPA Not Implemented</label>
        <picklist>
            <picklistValues>
                <fullName>Registros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manejo adecuado de agroquímicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Análisis de suelos y de aguas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instalaciones para almacenar insumos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiene todos los procesos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene ningún proceso</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Beans_To_Be_Harvested_Kg__c</fullName>
        <label>Beans To Be Harvested Kg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercialization_to_date__c</fullName>
        <label>Commercialization to date</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercialized_Kg__c</fullName>
        <label>Commercialized Kg</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Agri_Input_Storage__c</fullName>
        <label>Commitment Agri Input Storage</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitment_Agrochem_Management__c</fullName>
        <label>Commitment Agrochem Management</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitment_Registration__c</fullName>
        <label>Commitment Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commitment_Soil_Water_Analysis__c</fullName>
        <label>Commitment Soil Water Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crop_Area__c</fullName>
        <label>Crop Area</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Stage__c</fullName>
        <label>Crop Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Preparación del terreno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosecha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Destination_Sold_Product__c</fullName>
        <label>Destination Sold Product</label>
        <picklist>
            <picklistValues>
                <fullName>A clientes del mercado local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes del mercado regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes Mayoristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes Minoristas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes nacionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A clientes extranjeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <label>Farm</label>
        <referenceTo>EMP_Farm__c</referenceTo>
        <relationshipLabel>EMP Farm diagnosis and targets</relationshipLabel>
        <relationshipName>EMP_Farm_Diagnosis_and_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Farmer_signature__c</fullName>
        <label>Farmer signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Green_Dried_Beans__c</fullName>
        <label>Green Dried Beans</label>
        <picklist>
            <picklistValues>
                <fullName>Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Id_Productor__c</fullName>
        <label>Id Productor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_der_Productor__c</fullName>
        <label>Líder Productor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Productor__c</fullName>
        <label>Nombre del Productor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_plots__c</fullName>
        <label>Number of plots</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Destination_Sold_Product__c</fullName>
        <label>Other Destination Sold Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Agri_Input_Storage__c</fullName>
        <label>Other Reason Agri Input Storage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Agrochem_Management__c</fullName>
        <label>Other Reason Agrochem Management</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Not_Registration__c</fullName>
        <label>Other Reason Not Registration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Soil_Water_Analysis__c</fullName>
        <label>Other Reason Soil Water Analysis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Use_of_Resources__c</fullName>
        <label>Other Use of Resources</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_visit__c</fullName>
        <label>Photo visit</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Planting_date__c</fullName>
        <label>Planting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Kg__c</fullName>
        <label>Price Kg</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Kg_to_date__c</fullName>
        <label>Price per Kg to date</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Commercialized__c</fullName>
        <label>Production Commercialized</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Kg__c</fullName>
        <label>Production Kg</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_to_date_Kg__c</fullName>
        <label>Production to date (Kg)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Productive_sector__c</fullName>
        <label>Productive sector</label>
        <picklist>
            <picklistValues>
                <fullName>Fríjol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Agri_Input_Storage__c</fullName>
        <label>Reason Agri Input Storage</label>
        <picklist>
            <picklistValues>
                <fullName>No tiene recursos económicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene tiempo disponible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El proceso no aporta ningún beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sabe cómo implementarlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Agrochem_Management__c</fullName>
        <label>Reason Agrochem Management</label>
        <picklist>
            <picklistValues>
                <fullName>No tiene recursos económicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene tiempo disponible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El proceso no aporta ningún beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sabe cómo implementarlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Registration__c</fullName>
        <label>Reason Registration</label>
        <picklist>
            <picklistValues>
                <fullName>No tiene recursos económicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene tiempo disponible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El proceso no aporta ningún beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sabe cómo implementarlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Soil_Water_Analysis__c</fullName>
        <label>Reason Soil Water Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>No tiene recursos económicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No tiene tiempo disponible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El proceso no aporta ningún beneficio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sabe cómo implementarlo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requires_Org_Resources__c</fullName>
        <label>Requires Org. Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surveyor_signature__c</fullName>
        <label>Surveyor signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tomato_material__c</fullName>
        <label>Tomato material</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_vegetable__c</fullName>
        <label>Type of vegetable</label>
        <picklist>
            <picklistValues>
                <fullName>Cebolla de rama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cilantro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maíz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chócolo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Resources__c</fullName>
        <label>Use of Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Compra de semillas o plántulas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra abonos, enmiendas y fertilizantes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de productos fitosanitarios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compra de elementos para el tutorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Number__c</fullName>
        <label>Visit Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>kilos_plant_replica__c</fullName>
        <label>kilos plant replica</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kilos_will_plant_replica__c</fullName>
        <label>kilos will plant replica</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>plant_spacing_cm__c</fullName>
        <label>plant spacing cm</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>row_spacing_cm__c</fullName>
        <label>row spacing cm</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>submissionIBT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Farm Diagnosis and Targets</relationshipLabel>
        <relationshipName>EMP_Farm_Diagnosis_and_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EMP Farm Diagnosis and Targets</label>
    <nameField>
        <label>EMP Farm Diagnostic and Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMP Farm Diagnosis and Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>